@@ -1,3 +1,8 @@
+2002-09-15  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSFileManager.m: MacOS-X ([componentsToDisplayForPath:]) and
+	([displayNameAtPath:]) methods imnplemented.
+
 2002-09-13  Adam Fedor  <fedor@gnu.org>
 
 	* Source/cifframe.m (cifframe_guess_struct_size): Recurse if
